<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="app_name">Shinro</string>
    <string name="play_resume">Play/Resume</string>
    <string name="how_to_play_tips">How To Play/Tips</string>
    <string name="statistics">Statistics</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="achievements">Achievements</string>
    <string name="about">About</string>
    <string name="what_is_shinro">What Is Shinro?</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="resume_video">Resume</string>
    <string name="pause_video">Pause</string>
    <string name="about_text">Shinro (Android) v1.0.1\nDeveloper: Andrew Stefanich\ngithub.com/veyga/Shinro</string>
    <string name="thanks_text">Very special thanks to David Oranchak (PlayShinro.com)\n for providing much of this app\'s content</string>
    <string name="puzzle">Puzzle</string>
    <string name="board_num_fmt">%d</string>
    <string name="how_to_play">How To Play</string>
    <string name="pathfinder">The Pathfinder</string>
    <string name="blocker">The Blocker</string>
    <string name="pigeonhole">The Pigeonhole</string>
    <string name="difficulty_fmt">%s</string>
    <string name="freebies_remaining_fmt">Freebies:\n%d / 1</string>
    <string name="surrender">Surrender</string>
    <string name="reset">Reset</string>
    <string name="set_checkpoint">Set</string>
    <string name="reset_checkpoint">Reset</string>
    <string name="undo_to_checkpoint">Undo to</string>
    <string name="undo">Undo</string>
    <string name="victory">Victory</string>
    <string name="defeat">Defeat</string>
    <string name="current_difficulty_fmt">Current Difficulty: %s</string>
    <string name="timer_placeholder">Time:\n00:00</string>
    <string name="timer_fmt">Time:\n%s</string>
    <string name="time_taken_fmt">Time: %s</string>
    <string name="points_earned_fmt">Points Earned: %d</string>
    <string name="new_game">New Game</string>
    <string name="change_difficulty">Change Difficulty</string>
    <string name="difficulty">Difficulty</string>
    <string name="num_played">Played</string>
    <string name="win_pct">Win %</string>
    <string name="best_time">Best</string>
    <string name="average_time">Average</string>
    <string name="gathering_stats">Aggregating your stats…</string>
    <string name="games_connection_failed">Failed to connect to Google Games.\nSome features will be disabled</string>
    <string name="signed_out">Google Games is either inaccessible or you must have signed out.\nPlease try restarting the app to prompt the sign in.\nIf sign-in is still unsuccessful, then you dont an internet connection.\nYou may continue to play, but certain features will be inaccessible.</string>
    <string name="application_id">29512077397</string>
    <string name="leaderboard_total_points">CggI1aC6-G0QAhAB</string>
    <string name="leaderboard_winpct_hard">CggI1aC6-G0QAhAD</string>
    <string name="leaderboard_winpct_medium">CggI1aC6-G0QAhAC</string>
    <string name="achievement_10easy">CggI1aC6-G0QAhAE</string>
    <string name="achievement_25easy">CggI1aC6-G0QAhAF</string>
    <string name="achievement_50easy">CggI1aC6-G0QAhAG</string>
    <string name="achievement_5mineasy">CggI1aC6-G0QAhAH</string>
    <string name="achievement_3mineasy">CggI1aC6-G0QAhAI</string>
    <string name="achievement_10medium">CggI1aC6-G0QAhAJ</string>
    <string name="achievement_25medium">CggI1aC6-G0QAhAK</string>
    <string name="achievement_50medium">CggI1aC6-G0QAhAL</string>
    <string name="achievement_10minmedium">CggI1aC6-G0QAhAM</string>
    <string name="achievement_6minmedium">CggI1aC6-G0QAhAN</string>
    <string name="achievement_10hard">CggI1aC6-G0QAhAO</string>
    <string name="achievement_25hard">CggI1aC6-G0QAhAP</string>
    <string name="achievement_50hard">CggI1aC6-G0QAhAQ</string>
    <string name="achievement_20minhard">CggI1aC6-G0QAhAR</string>
    <string name="achievement_10minhard">CggI1aC6-G0QAhAS</string>
</resources>

