<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.TipsChoiceFragment">

    <data>

        <variable
            name="fragment"
            type="io.astefanich.shinro.ui.TipsChoiceFragment" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.chip.ChipGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="48sp">

            <com.google.android.material.chip.Chip
                android:id="@+id/how_to_play_chip"
                style="@style/ChipStyle"
                android:text="@string/how_to_play"
                tools:text="How to Play" />

            <!-- chip style doesn't bold text deterministically -->
            <com.google.android.material.chip.Chip
                android:id="@+id/pathfinder_chip"
                style="@style/ChipStyle"
                android:textStyle="bold"
                android:text="@string/pathfinder"
                tools:text="Pathfinder" />

            <com.google.android.material.chip.Chip
                android:id="@+id/blocker_chip"
                style="@style/ChipStyle"
                android:text="@string/blocker"
                tools:text="Blocker" />

            <com.google.android.material.chip.Chip
                android:id="@+id/pigeonhole_chip"
                style="@style/ChipStyle"
                android:text="@string/pigeonhole"
                tools:text="Pigeonhole" />
        </com.google.android.material.chip.ChipGroup>
    </LinearLayout>
</layout>
