<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.TitleFragment">

    <LinearLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/title_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            app:srcCompat="@drawable/ic_launcher_shinro_background"
            tools:srcCompat="@drawable/ic_launcher_shinro_background" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:fontFamily="@font/convergence"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="48sp"
            android:textStyle="bold"
            tools:srcCompat="SHINRO" />

        <!--        android:layout_margin="24dp"-->

        <com.google.android.material.chip.ChipGroup
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            android:layout_weight="4"
            android:gravity="center">

            <com.google.android.material.chip.Chip
                android:id="@+id/play_resume_chip"
                style="@style/ChipStyle"
                android:text="@string/play"
                android:textStyle="bold"
                tools:text="Play/Resume" />

            <com.google.android.material.chip.Chip
                android:id="@+id/how_to_play_tips_chip"
                style="@style/ChipStyle"
                android:text="@string/how_to_play_tips"
                tools:text="How to Play/Tips" />

            <com.google.android.material.chip.Chip
                android:id="@+id/statistics_chip"
                style="@style/ChipStyle"
                android:text="@string/statistics"
                tools:text="Statistics" />

            <com.google.android.material.chip.Chip
                android:id="@+id/leaderboard_chip"
                style="@style/ChipStyle"
                android:text="@string/leaderboard"
                tools:text="Leaderboard" />

            <com.google.android.material.chip.Chip
                android:id="@+id/achievements_chip"
                style="@style/ChipStyle"
                android:text="@string/achievements"
                tools:text="Achievements" />

            <com.google.android.material.chip.Chip
                android:id="@+id/about_chip"
                style="@style/ChipStyle"
                android:text="@string/about"
                tools:text="About" />
        </com.google.android.material.chip.ChipGroup>
    </LinearLayout>
</layout>
