<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.AboutFragment">

    <data>

        <variable
            name="fragment"
            type="io.astefanich.shinro.ui.AboutFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.chip.Chip
            android:id="@+id/video_playback_button"
            style="@style/ChipStyle"
            android:layout_width="wrap_content"
            android:layout_margin="32dp"
            android:onClick="@{() -> fragment.onVideoButtonPress()}"
            android:text="@string/what_is_shinro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:videoPlaying="@{fragment.videoPlaying}"
            app:videoStarted="@{fragment.videoStarted}" />

        <VideoView
            android:id="@+id/instructions_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="64dp"
            android:onClick="@{() -> fragment.onVideoButtonPress()}"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/about_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/video_playback_button" />

        <ImageView
            android:id="@+id/video_img_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="64dp"
            android:onClick="@{() -> fragment.onVideoButtonPress()}"
            app:layout_constraintBottom_toTopOf="@+id/about_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/video_playback_button"
            app:srcCompat="@drawable/play_button"
            tools:srcCompat="@drawable/play_button" />

        <TextView
            android:id="@+id/about_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:text="@string/about_text"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/about_text" />

        <TextView
            android:id="@+id/thanks_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:text="@string/thanks_text"
            android:textAlignment="center"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_text"
            tools:text="@string/thanks_text" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>